# spec-search

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
datas/: jbb2015-results.csv
docs/: architecture.md  data-refresh.md  prd.md
docs/adr/: ADR-001-monorepo-layout.md  ADR-002-fastmcp-v3.md  ADR-003-csv-to-json-pipeline.md  ADR-004-mcp-github-package.md  ADR-005-benchmark-display-labels.md
docs/superpowers/plans/: 2026-03-23-pptx-export.md
docs/superpowers/specs/: 2026-03-23-pptx-export-design.md
mcp_server/: README.md  data_loader.py  pyproject.toml  server.py
mcp_server/src/spec_search_mcp/: __init__.py  data_loader.py  server.py
mcp_server/tests/: test_server.py
scripts/: convert_csv.py
tests/: test_convert_csv.py
web/: biome.json  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
web/public/: manifest.json
web/src/: App.jsx  index.css
web/src/__tests__/: benchmarks.test.js  exportPptx.test.js  useSearch.test.js
web/src/components/: BarChart.jsx  ComparisonTray.jsx  ComparisonView.jsx  FilterBar.jsx  Pagination.jsx  RadarChart.jsx  ResultCard.jsx  ResultsList.jsx  ResultsTable.jsx  exportPptx.js
web/src/constants/: benchmarks.js  suites.js
web/src/hooks/: useMediaQuery.js  useSearch.js  useSuite.js
