[project]
name = "spec-search"
version = "1.0.0"
description = "SPEC CPU2017 benchmark search — data pipeline, MCP server, and web app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "pip-audit>=2.7"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
