[project]
name = "spec-search-mcp"
version = "1.0.0"
description = "MCP server for SPEC CPU2017 benchmark search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.0", "pandas>=2.0"]

[project.scripts]
spec-search-mcp = "spec_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_search_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/spec_search_mcp/data/cpu2017-results.csv.gz" = "spec_search_mcp/data/cpu2017-results.csv.gz"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "pip-audit>=2.7", "cyclonedx-bom>=5.0"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
